# rust_silence

./: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.py
rust_silence/: __init__.py  core.py
src/: lib.rs  load.rs  preprocess_f5.rs  silence.rs
tests/: test_core.py
